<?xml version="1.0" encoding="utf-8"?>
<!--
   - COP4331C - Class Project - The Game Helper App
   - Spring 2015
   -
   - Project authors:
   -   Mark Andrews
   -   Jacob Cassagnol
   -   Kurt Hawkes
   -   Tim McCarthy
   -   Andrew McKenzie
   -   Amber Stewart
-->
<resources>

    <string name="app_name">Domino</string>
    <string name="action_settings">Settings</string>

    <string name="txtBtnTakePicture">Take Picture</string>
    <string name="txtBtnProcess">Process</string>
    <string name="txtBtnReturn">Return</string>

    <string name="txtBtnGray">Gray</string>
    <string name="txtBtnMagnitude">Magnitude</string>
    <string name="txtBtnPeaks">Peaks</string>
    <string name="txtBtnDetectedShapes">D. Shapes</string>
    <string name="txtBtnCategorizedShapes">C. Shapes</string>
    <string name="txtBtnEdges">Edges</string>
    <string name="txtBtnOriginal">Original</string>

    <string name="imgDescr">pictureView</string>
    <string name="title_activity_main_window">Game Helper</string>
    <string name="title_activity_game_window">Game Window</string>
    <string name="title_activity_score_board">Score Board</string>
    <string name="remainingPoints">0</string>

    <!--Activity Main Window-->
    <string name="txtScreenTitle">The Game Helper App</string>
    <string name="txtCurrentGame">Selected Game</string>
    <string name="txtSwitchGame">Switch Game</string>
    <string name="txtNewGame">New Game</string>
    <string name="txtAllRules">All Rules</string>

    <!--DialogFragmentsNames-->
    <string name="newGame">New Game</string>
    <string name="endSet">Set End</string>
    <string name="deleteRow">Row Delete</string>
    <string name="deleteColumn">Column Delete</string>
    <string name="addRow">Add Row</string>
    <string name="addColumn">Add Column</string>
    <string name="editField">Edit Field</string>
    <string name="endSelect">End Select</string>
    <string name="draw">Draw</string>
    <string name="newGameMT">New Game MT</string>
    <string name="startCamera">Start Camera</string>
    <string name="letterSelect">Letter Select</string>
    <string name="leadOffLetterSelect">Lead Off Letter</string>

    <!--DialogFragmentStrings-->
    <string name="newGameText">Start a new game? \nAll data will be deleted</string>
    <string name="endSetText">Add points to score board\nand start a new set?</string>
    <string name="deleteRowText">Remove player:</string>
    <string name="deleteColumnText">Remove set:</string>
    <string name="addRowText">Create new player?</string>
    <string name="addColumnText">Create new set?</string>
    <string name="endSelectTitle">Please select the train head</string>
    <string name="startCameraText">Do you want to use the camera to read your hand?</string>
    <string name="txtDlgCancel">Cancel</string>
    <string name="txtDlgAdd">Add</string>
    <string name="txtDlgYes">Yes</string>
    <string name="txtDlgOK">OK</string>
    <string name="txtDlgDone">Done</string>
    <string name="txtDlgRemove">Remove</string>
    <string name="txtDlgNo">No</string>
    <string name="txtDlgAddContinue">Add and Continue</string>
    <string name="txtDlgAddClose">Add and Close</string>
    <string name="txtDlgUpdate">Update</string>
    <string name="nameChange">Enter new name</string>
    <string name="dataChange">Change score</string>
    <string name="setChange">Delete round?</string>
    <string name="letterSelectTitle">Please select a letter</string>
    <string name="leadOffLetterSelectTitle">Please select the lead-off letter</string>

    <!--ScoreBoard-->
    <string name="total">Total</string>
    <string name="set">Set</string>
    <string name="rules_button">Rules</string>

    <string name="about_string">About</string>
    <string name="rules_string">Rules</string>

    <string name="settings_string">Settings</string>
    <string name="new_game_string">New Game</string>
    <string name="score_board_string">Score Board</string>
    <string name="exit_string">Exit</string>
    <string name="return_string">Return</string>
    <string name="home_string">Home</string>
    <string name="camera_string">Camera</string>
    <string name="rules_menu_string">Rules</string>
    <string name="dominoes_rules_button_string">Mexican Train Dominoes</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_rule_detail">RuleDetailActivity</string>

    <!--Activity Game Window-->
    <string name="actGameWindow_txtTitle">Title Menu Text</string>
    <string name="actGameWindow_btnLongestRun">Longest Run</string>
    <string name="actGameWindow_btnHighestScore">Highest Score</string>
    <string name="actGameWindow_btnDraw">Draw</string>
    <string name="actGameWindow_btnUnsorted">Unsorted Hand</string>
    <string name="actGameWindow_btnUndo">Undo</string>
    <string name="actGameWindow_btnUnused">Unused</string>

    <!--New Game Layout-->
    <string name="actNewGame_txtTitle">Select New Game Settings</string>
    <string name="actNewGame_txtDominoSetLabel">Domino Set</string>
    <string name="actNewGame_txtDominoSet">Double Nine</string>
    <string name="actNewGame_txtPlayersLabel">Players</string>
    <string name="actNewGame_txtPlayers">1</string>
    <string name="actNewGame_txtRulesLabel">Rules</string>
    <string name="actNewGame_txtRules">Traditional</string>

    <!--Scrabble Game Window-->
    <string name="scrbGameWindow_txtTitle">Scrabble Game</string>
    <string name="scrbGameWindow_btnLongestRun">Longest Word</string>
    <string name="scrbGameWindow_btnHighestScore">Highest Score</string>
    <string name="scrbGameWindow_btnDraw">Draw</string>
    <string name="scrbGameWindow_btnUnsorted">Unsorted Hand</string>
    <string name="scrbGameWindow_btnUndo">Undo</string>
    <string name="scrbGameWindow_btnUnused">Unused</string>
    <string name="scrbGameWindow_btnListWords">List Words</string>
    <string name="scrabble_eddit_text_help">Enter Letters (spaces for blank)</string>


</resources>
