<?xml version="1.0" encoding="utf-8"?>
<!--
   - COP4331C - Class Project - The Game Helper App
   - Spring 2015
   -
   - Project authors:
   -   Mark Andrews
   -   Jacob Cassagnol
   -   Kurt Hawkes
   -   Tim McCarthy
   -   Andrew McKenzie
   -   Amber Stewart
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="game.gamehelper.MainWindow">

    <!--App title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtScreenTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" />

    <!--Game title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtCurrentGame"
        android:layout_centerInParent="true"
        android:id="@+id/gameTitle"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:translationY="-100dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNewGame"
        android:id="@+id/newGameButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp" />

    <!--Next button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSwitchGame"
        android:id="@+id/nextGameButton"
        android:layout_alignTop="@+id/newGameButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listRulesButton"
        android:text="@string/txtAllRules"
        android:layout_alignTop="@+id/newGameButton"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
