<?xml version="1.0" encoding="utf-8"?>
<!--
   - COP4331C - Class Project - The Game Helper App
   - Spring 2015
   -
   - Project authors:
   -   Mark Andrews
   -   Jacob Cassagnol
   -   Kurt Hawkes
   -   Tim McCarthy
   -   Andrew McKenzie
   -   Amber Stewart
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="game.gamehelper.Scrabble.ScrabbleWindow" >

    <Space
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="100dp"
        android:id="@+id/space" />

    <!--Letter List-->
    <GridView android:id="@+id/gridViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/space"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/space" />

    <!--Points Remaining-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/scrbGameWindow_txtTitle"
        android:id="@+id/titleText"
        android:layout_gravity="start|top"
        android:singleLine="false"
        android:inputType="text"
        android:layout_alignStart="@+id/space"
        android:layout_alignEnd="@+id/space"
        android:focusableInTouchMode="false" />

    <!--Point remaining value-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/remPoint"
        android:layout_below="@+id/titleText"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/titleText"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:clickable="false"
        android:inputType="text" />

    <!--Last value played image-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_above="@+id/gridViewMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/longestRunButton" />


    <!--Longest run button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/scrbGameWindow_btnLongestRun"
        android:id="@+id/longestRunButton"
        android:layout_toEndOf="@+id/gridViewMain"
        android:layout_alignTop="@+id/gridViewMain" />

    <!--Highest score button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/scrbGameWindow_btnHighestScore"
        android:id="@+id/highestScoreButton"
        android:layout_toEndOf="@+id/gridViewMain"
        android:layout_below="@+id/longestRunButton" />

    <!--Draw button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/scrbGameWindow_btnDraw"
        android:id="@+id/drawButton"
        android:layout_toEndOf="@+id/gridViewMain"
        android:layout_below="@+id/highestScoreButton"/>

    <!--Unsorted button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/scrbGameWindow_btnUnsorted"
        android:id="@+id/unsortedButton"
        android:layout_toEndOf="@+id/gridViewMain"
        android:layout_below="@+id/drawButton"/>

    <!--Undo button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/scrbGameWindow_btnUndo"
        android:id="@+id/undoButton"
        android:layout_toEndOf="@+id/gridViewMain"
        android:layout_below="@+id/unsortedButton"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scrbGameWindow_btnUnused"
        android:id="@+id/unusedButton"
        android:layout_below="@+id/undoButton"
        android:layout_alignEnd="@+id/undoButton"
        android:layout_alignStart="@+id/undoButton" />

</RelativeLayout>
